package br.edu.ifpb.pweb3.javerna.model.enums;

public enum CategoriaAmostra {
    ROCHA,
    SOLO,
    AGUA,
    SEDIMENTO,
    BIOLOGICA,
    OUTRA
}
