package br.edu.ifpb.pweb3.javerna.model.enums;

public enum CondicaoConservacao {
    AMBIENTE,
    REFRIGERADA,
    CONGELADA,
    PRESERVADA_QUIMICAMENTE
}
