package br.edu.ifpb.pweb3.javerna.model.enums;

public enum NivelDificuldade {
    BAIXO,
    MODERADO,
    ALTO,
    EXTREMO
}
