package br.edu.ifpb.pweb3.javerna.model.enums;

public enum PapelParticipante {
    COORDENADOR,
    PESQUISADOR,
    GUIA,
    TECNICO,
    APOIO
}
