package br.edu.ifpb.pweb3.javerna.model.enums;

public enum SituacaoAutorizacao {
    PENDENTE,
    EMITIDA,
    EXPIRADA,
    SUSPENSA,
    REVOGADA
}
