package br.edu.ifpb.pweb3.javerna.model.enums;

public enum SituacaoExpedicao {
    PLANEJADA,
    AUTORIZADA,
    EM_ANDAMENTO,
    CONCLUIDA,
    CANCELADA
}
