package br.edu.ifpb.pweb3.javerna.model.enums;

public enum SituacaoOperacional {
    DISPONIVEL,
    EM_USO,
    EM_MANUTENCAO,
    INDISPONIVEL,
    DESCARTADO
}
