package br.edu.ifpb.pweb3.javerna.model.enums;

public enum SituacaoRelatorio {
    RASCUNHO,
    SUBMETIDO,
    EM_ANALISE,
    APROVADO,
    REJEITADO
}
