package br.edu.ifpb.pweb3.javerna.model.enums;

public enum SituacaoValidacaoColeta {
    PENDENTE,
    VALIDADA,
    REJEITADA
}
