package br.edu.ifpb.pweb3.javerna.model.enums;

public enum TipoEquipamento {
    ILUMINACAO,
    COMUNICACAO,
    MEDICAO,
    SEGURANCA,
    COLETA,
    TRANSPORTE,
    OUTRO
}
